--- a/src/app/admin-dashboard/charts-data/charts-data.component.html
+++ b/src/app/admin-dashboard/charts-data/charts-data.component.html
@@ -2,12 +2,12 @@
   <div class="bg-blue-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-book text-blue-500 text-3xl mb-2"></i>
     <h2 class="text-2xl font-semibold text-gray-700">Modules</h2>
-    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">10</span></p>
+    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">{{modulesNumber }}</span></p>
   </div>
   <div class="bg-green-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-user-graduate text-green-500 text-3xl mb-2 font-bold"></i>
     <h2 class="text-2xl font-semibold text-gray-700">Enseignants</h2>
-    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">15</span></p>
+    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">{{ enseignantsNumber }}</span></p>
   </div>
   <div class="bg-yellow-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-users text-yellow-500 text-3xl mb-2"></i>
@@ -17,7 +17,7 @@
   <div class="bg-purple-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-book-open text-purple-500 text-3xl mb-2"></i>
     <h2 class="text-2xl font-semibold text-gray-700">Filliéres</h2>
-    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">5</span></p>
+    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">{{ fillieresNumber }}</span></p>
   </div>
 </div>
 <div class="flex flex-col h-full">
@@ -31,7 +31,11 @@
       <div class="bg-white rounded-lg shadow-md p-6">
         <canvas id="barChart"></canvas>
       </div>
+
       <div class="bg-white rounded-lg shadow-md p-6">
+        <select (change)="onFiliereChange($event)">
+          <option *ngFor="let filiere of filieres" [value]="filiere.id">{{filiere.nom}}</option>
+        </select>
         <canvas id="pieChart"></canvas>
       </div>
     </div>
