--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -36,7 +36,7 @@
       </li>
 
       <li>
-        <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+        <a routerLink="interventions" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
 			<i class="fa-solid fa-book-open-cover"></i>
           <span class="flex-1 ms-3 whitespace-nowrap">Interventions</span>
         </a>
