--- a/src/app/admin-dashboard/enseignantes/enseignantes.component.html
+++ b/src/app/admin-dashboard/enseignantes/enseignantes.component.html
@@ -19,7 +19,7 @@
 			<div class="mt-4">
 				<label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Email de l'enseignant:</label>
 				<input [(ngModel)]="enseignant_email"  type="email" name="email" id="email" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Email de l'enseignant" required="">
-        <div class="flex gap-4">
+        <div class="flex gap-4 mt-3">
 				<div class="w-1/2"><label for="nom" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Nom de l'enseignant:</label>
 				<input [(ngModel)]="enseignant_nom"  type="text" name="nom" id="nom" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Nom de l'enseignant" required="">
         </div>
@@ -28,7 +28,7 @@
 				<input [(ngModel)]="enseignant_prenom"  type="text" name="prenom" id="prenom" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Prénom de l'enseignant" required="">
           </div>
           </div>
-				<div class="w-full" >
+				<div class="w-full mt-3	" >
           <label for="password" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Mot de passe de l'enseignant:</label>
 				  <input [(ngModel)]="enseignant_password"  type="password" name="password" id="password" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Mot de passe de l'enseignant" required="">
         </div>
