fixing some errors

--- a/src/app/admin-dashboard/interventions/interventions.component.html
+++ b/src/app/admin-dashboard/interventions/interventions.component.html
@@ -125,7 +125,7 @@
 						{{interv.nbevalInterv}}
 					</td>
 					<td class="px-6 py-4">
-						{{interv.module}}
+						{{interv.module.intitule}}
 					</td>
 					<td class="px-6 py-4">
 						PR.{{interv.enseignant.nom+" "+interv.enseignant.prenom}}
