--- a/src/app/admin-dashboard/charts-data/charts-data.component.html
+++ b/src/app/admin-dashboard/charts-data/charts-data.component.html
@@ -12,7 +12,7 @@
   <div class="bg-yellow-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-users text-yellow-500 text-3xl mb-2"></i>
     <h2 class="text-2xl font-semibold text-gray-700">Interventions</h2>
-    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">200</span></p>
+    <p class="text-gray-500 text-lg mt-2">Total <span class="ml-2 font-bold">{{interventionsNumber}}</span></p>
   </div>
   <div class="bg-purple-100 rounded-lg shadow-md p-6">
     <i class="fa-solid fa-book-open text-purple-500 text-3xl mb-2"></i>
