--- a/src/app/admin-dashboard/enseignantes/enseignantes.component.html
+++ b/src/app/admin-dashboard/enseignantes/enseignantes.component.html
@@ -18,7 +18,7 @@
 		<form >
 			<div class="mt-4">
 				<label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Email de l'enseignant:</label>
-				<input [(ngModel)]="enseignant_email"  type="email" name="email" id="email" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Email de l'enseignant" required="">
+				<input [(ngModel)]="enseignant_email" [disabled]="action == 'Modifier'" type="email" name="email" id="email" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Email de l'enseignant" required="">
         <div class="flex gap-4 mt-3">
 				<div class="w-1/2"><label for="nom" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Nom de l'enseignant:</label>
 				<input [(ngModel)]="enseignant_nom"  type="text" name="nom" id="nom" class="mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500" placeholder="Nom de l'enseignant" required="">
@@ -78,10 +78,11 @@
           <td>
             {{enseignant.prenom}}
           </td>
+          <td>{{enseignant.role}}</td>
           <td>
             {{enseignant.email}}
           </td>
-          <td>{{enseignant.role}}</td>
+
 					<td class="px-6 py-4 text-right flex justify-start">
 						<button (click)="set_update(enseignant);this.showform=true;this.validationError=false;"   type="button" class="flex items-center focus:outline-none text-white bg-blue-500 hover:bg-blue-600 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-blue-900">
 							<i class="fa-solid fa-pen-to-square me-2"></i>
