--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,1 +1,60 @@
-<p>user-page works!</p>
+
+<button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+  <span class="sr-only">Open sidebar</span>
+  <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+    <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+  </svg>
+</button>
+
+<aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
+  <div class="h-full px-6 py-6 overflow-y-auto bg-white dark:bg-gray-800 shadow-lg">
+    <div class="flex flex-col items-center space-y-4">
+      <img class="w-32 h-32 rounded-full border-4 border-blue-500 object-cover" src="assets/imgs/user-image.png" alt="User Logo">
+      <div class="text-center">
+        <h2 class="text-2xl font-bold text-gray-700 dark:text-gray-300">{{user.nom}} {{user.prenom}}</h2>
+        <p class="text-gray-500 dark:text-gray-400">{{user.email}}</p>
+      </div>
+    </div>
+    <ul class="mt-6 space-y-2">
+      <li>
+
+        <a routerLink="profile" class="block px-4 py-2 text-md text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700 rounded-lg">
+          <i class="fa-solid fa-user"></i>
+          Profile
+        </a>
+      </li>
+      <li>
+        <a href (click)="logout()" class="block px-4 py-2 text-md text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700 rounded-lg">
+          <i class="fa-solid fa-right-from-bracket"></i>
+          Logout
+        </a>
+      </li>
+    </ul>
+  </div>
+
+
+</aside>
+
+<div class="p-4 sm:ml-64 sticky top-10">
+
+
+  <div class="border-b border-gray-200 dark:border-gray-700">
+    <ul class="flex flex-wrap -mb-px text-sm font-medium text-center text-gray-500 dark:text-gray-400">
+      <li class="me-2">
+        <a routerLink="modules" routerLinkActive="!text-blue-600 border-b-2 !border-blue-600" class="inline-flex items-center justify-center p-4 border-b-2 border-transparent  rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300 group">
+          <i class="fa-solid fa-books text-xl mr-2"></i>
+          Modules
+        </a>
+      </li>
+      <li class="me-2">
+        <a routerLink="interventions" routerLinkActive="!text-blue-600 border-b-2 !border-blue-600" class="inline-flex items-center justify-center p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300 group">
+          <i class="fa-solid fa-book-open-cover text-xl mr-2"></i>
+          Interventions
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
