confirmation modal for delete and style problems fixed

--- a/src/app/admin-dashboard/charts-data/charts-data.component.html
+++ b/src/app/admin-dashboard/charts-data/charts-data.component.html
@@ -33,9 +33,9 @@
       </div>
 
       <div class="bg-white rounded-lg shadow-md p-6">
-        <div class="flex gap-2">
-          <label>Filliere : </label>
-          <select (change)="onFiliereChange($event)">
+        <div class="max-w-sm mx-auto">
+          <label class="block mb-2 text-sm font-medium text-gray-900 " >Filliere : </label>
+          <select (change)="onFiliereChange($event)" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 " >
             <option *ngFor="let filiere of filieres" [value]="filiere.id">{{filiere.nom}}</option>
           </select>
         </div>
