--- a/src/app/admin-dashboard/filieres/filieres.component.html
+++ b/src/app/admin-dashboard/filieres/filieres.component.html
@@ -49,12 +49,19 @@
             <i class="fa-solid fa-pen-to-square me-2"></i>
             Modifier
           </button>
-          <button (click)="deleteFiliere(filiere.id)" type="button" class="font-semibold hover:transition hover:bg-red-800 text-white bg-red-500 text-sm px-2 py-1 rounded">
+          <button (click)="openConfirmationModal(filiere.id)" type="button" class="font-semibold hover:transition hover:bg-red-800 text-white bg-red-500 text-sm px-2 py-1 rounded">
             <i class="fa-solid fa-trash me-2"></i>
             Supprimer
           </button>
         </div>
+
     </div>
     </div>
+    <app-confirmation
+      *ngIf="showConfirmationModal"
+      [show]="showConfirmationModal"
+      (confirm)="deleteFiliere()"
+      (cancel)="closeConfirmationModal()"
+    ></app-confirmation>
   </div>
 </div>
