--- a/src/app/admin-dashboard/modules/modules.component.html
+++ b/src/app/admin-dashboard/modules/modules.component.html
@@ -77,70 +77,56 @@
 	<div *ngIf="this.modules.length<=0" class="mt-3 p-4 mb-4 text-sm text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
 		<span class="font-medium">Aucune module n'a été trouvée!</span> Veuillez créer des Modules.
 	  </div>
-	<div *ngIf="this.modules.length>0" class="mt-6 relative overflow-x-auto shadow-md sm:rounded-lg">
-		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-				<tr>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						Intitulé
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						VHcours
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						VHtd
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						VHtp
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						NB évaluations
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						Filière
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						Enseignant
-					</th>
-					<th scope="col" class="px-6 py-3 text-gray-900 ">
-						Actions
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr *ngFor="let module of modules"  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-					<td class="px-6 py-4">
-						{{module.intitule}}
-					</td>
-					<td class="px-6 py-4">
-						{{module.vhcour}}
-					</td>
-					<td class="px-6 py-4">
-						{{module.vhtd}}
-					</td>
-					<td class="px-6 py-4">
-						{{module.vhtp}}
-					</td>
-					<td class="px-6 py-4">
-						{{module.nbeval}}
-					</td>
-					<td class="px-6 py-4">
-						{{module.filiere.nom}}
-					</td>
-					<td class="px-6 py-4">
-						PR.{{module.enseignant.nom+" "+module.enseignant.prenom}}
-					</td>
-					<td class="px-6 py-4">
-						<button (click)="set_update(module);this.showForm=true;this.validationError=false;"   type="button" class=" focus:outline-none text-white bg-blue-500 hover:bg-blue-600 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-blue-900">
-							<i class="fa-solid fa-pen-to-square me-2"></i>
-						</button>
-						<button (click)="delete(module.intitule)" type="button" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
-							<i class="fa-solid fa-trash me-2"></i>
-						</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+	<div *ngIf="this.modules.length>0" class="mt-6 relative overflow-x-auto shadow-md sm:rounded-sm">
+    <div class="overflow-x-auto">
+      <table class="w-full text-sm text-left text-gray-700 dark:text-gray-300">
+        <thead class="bg-gray-200 dark:bg-gray-700">
+        <tr>
+          <th class="px-6 py-3 font-medium">Intitulé</th>
+          <th class="px-6 py-3 font-medium">VHcours</th>
+          <th class="px-6 py-3 font-medium">VHtd</th>
+          <th class="px-6 py-3 font-medium">VHtp</th>
+          <th class="px-6 py-3 font-medium">NB évaluations</th>
+          <th class="px-6 py-3 font-medium">Filière</th>
+          <th class="px-6 py-3 font-medium">Enseignant</th>
+          <th class="px-6 py-3 font-medium">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let module of modules" class="border-b dark:border-gray-700 hover:bg-gray-100 dark:hover:bg-gray-800">
+          <td class="px-6 py-4 font-semibold">{{ module.intitule }}</td>
+          <td class="px-6 py-4">{{ module.vhcour }}</td>
+          <td class="px-6 py-4">{{ module.vhtd }}</td>
+          <td class="px-6 py-4">{{ module.vhtp }}</td>
+          <td class="px-6 py-4">{{ module.nbeval }}</td>
+          <td class="px-6 py-4">{{ module.filiere.nom }}</td>
+          <td class="px-6 py-4">PR. {{ module.enseignant.nom + " " + module.enseignant.prenom }}</td>
+          <td class="px-6 py-4 flex justify-center gap-4">
+            <button
+              (click)="set_update(module); this.showForm = true; this.validationError = false;"
+              type="button"
+              class="flex justify-center items-center hover:bg-white rounded-md px-2 hover:shadow-md"
+              >
+              <i class="fa-solid text-blue-500 text-2xl fa-pen-to-square mr-1"></i>
+            </button>
+            <button
+              (click)="openConfirmationModal(module.intitule)"
+              type="button"
+              class="flex justify-center items-center hover:bg-white rounded-md px-2 hover:shadow-md"
+              >
+              <i class="fa-solid text-red-500 text-2xl fa-trash mr-1"></i>
+            </button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <app-confirmation
+      *ngIf="showConfirmationModal"
+      [show]="showConfirmationModal"
+      (confirm)="deleteModule()"
+      (cancel)="closeConfirmationModal()"
+    ></app-confirmation>
 	</div>
 </div>
 
