--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,8 @@
             type="submit"
             class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
           >
-            Sign in
+            <span *ngIf="!authentication">Sign in</span>
+            <span *ngIf="authentication" >Login....</span>
           </button>
 
         </form>
